--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<version>3.0.4.RELEASE</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.github.javafaker</groupId>-->
+<!--			<artifactId>javafaker</artifactId>-->
+<!--			<version>1.0.2</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
